--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "contentlayer": "^0.3.4",
     "github-slugger": "^2.0.0",
     "lucide-react": "^0.424.0",
-    "next": "13.5.4",
+    "next": "^13.5.4",
     "next-contentlayer": "^0.3.4",
     "next-sitemap": "^4.2.3",
     "react": "^18",
@@ -35,13 +35,13 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
